log/build_2025-01-07_15-55-05/mypkg/stderr.log
  File "/home/sasaki/ros2_ws/src/mypkg/install/mypkg/lib/python3.8/site-packages/mypkg/listener.py", line 10
    def cb(msg)
              ^
SyntaxError: invalid syntax

